<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".AddActivity">

    <EditText
        android:id="@+id/et_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/hint_title"
        android:inputType="textCapWords"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_new"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_new"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_entry"
        android:textColor="@color/titleColor"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="@id/et_title"
        app:layout_constraintBottom_toBottomOf="@id/et_title"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"/>

    <EditText
        android:id="@+id/et_topic"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/eight"
        android:layout_marginEnd="@dimen/eight"
        android:hint="@string/hint_topic"
        android:inputType="textCapWords"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/sp_topics"
        app:layout_constraintTop_toBottomOf="@id/et_title" />

    <Spinner
        android:id="@+id/sp_topics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/et_topic"
        app:layout_constraintBottom_toBottomOf="@id/et_topic"
        android:layout_marginStart="@dimen/eight"/>

    <EditText
        android:id="@+id/et_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="start"
        android:hint="@string/hint_content"
        android:inputType="textCapSentences"
        app:layout_constraintBottom_toTopOf="@+id/b_add"
        app:layout_constraintTop_toBottomOf="@id/et_topic" />

    <TextView
        android:id="@+id/b_add"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/add"
        android:tag="add"
        android:textSize="18sp"
        android:textColor="@color/titleColor"
        android:background="@drawable/button_add"
        android:gravity="center"/>
</android.support.constraint.ConstraintLayout>