<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/titleColor"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="16dp"
        android:text="@string/sample_date_medium"/>

    <TextView
        android:id="@+id/tv_sub_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_date"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:paddingBottom="8dp"
        android:text="@string/sample_text_short"/>

    <View
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="@color/boundaries"
        app:layout_constraintStart_toEndOf="@id/tv_sub_0"
        app:layout_constraintEnd_toStartOf="@id/tv_sub_1"
        app:layout_constraintTop_toTopOf="@id/tv_sub_1"
        app:layout_constraintBottom_toBottomOf="@id/tv_sub_1"/>

    <TextView
        android:id="@+id/tv_sub_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_date"
        app:layout_constraintStart_toEndOf="@id/tv_sub_0"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:text="@string/sample_text_short"/>

    <View
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="@color/boundaries"
        app:layout_constraintStart_toEndOf="@id/tv_sub_1"
        app:layout_constraintEnd_toStartOf="@id/tv_sub_2"
        app:layout_constraintTop_toTopOf="@id/tv_sub_1"
        app:layout_constraintBottom_toBottomOf="@id/tv_sub_1"/>

    <TextView
        android:id="@+id/tv_sub_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_date"
        app:layout_constraintStart_toEndOf="@id/tv_sub_1"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:text="@string/sample_text_short"/>

    <View
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:background="@color/boundaries"
        app:layout_constraintStart_toEndOf="@id/tv_sub_2"
        app:layout_constraintEnd_toStartOf="@id/tv_sub_3"
        app:layout_constraintTop_toTopOf="@id/tv_sub_1"
        app:layout_constraintBottom_toBottomOf="@id/tv_sub_1"/>

    <TextView
        android:id="@+id/tv_sub_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_date"
        app:layout_constraintStart_toEndOf="@id/tv_sub_2"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:text="@string/cont"/>

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/background_date" />
</android.support.constraint.ConstraintLayout>